@@ -10,9 +10,6 @@ if ds.$(name)_fileprefix and ds.$(name)_filepostfix:
     if postfix in [".nxs", ".nx"]:
         prefix = str(ds.$(name)_fileprefix)
         ds.result = "$var.entryname#'$(__entryname__)'$var.serialno:NXentry/$(__insname__)/$(name)_external:NXdetector/data"</result>
- $datasources.$(name)_filedir
  $datasources.$(name)_fileprefix
- $datasources.$(name)_filepostfix
- $datasources.$(name)_filestartnum
- $datasources.$(name)_filesaving</datasource>
+ $datasources.$(name)_filepostfix</datasource>
 </definition>
